--- a/companion/src/modeledit/telemetry_analog.ui
+++ b/companion/src/modeledit/telemetry_analog.ui
@@ -43,7 +43,7 @@
       </widget>
      </item>
      <item row="2" column="0">
-      <widget class="QLabel" name="label_919">
+      <widget class="QLabel" name="alarm1Label">
        <property name="sizePolicy">
         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -106,7 +106,7 @@
       </widget>
      </item>
      <item row="3" column="0">
-      <widget class="QLabel" name="label_921">
+      <widget class="QLabel" name="alarm2Label">
        <property name="sizePolicy">
         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
          <horstretch>0</horstretch>
