--- a/speaker/MainWindow.xaml
+++ b/speaker/MainWindow.xaml
@@ -2,10 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="OpenTX Speaker" 
-        Height="480" 
+        Height="460" 
         MinWidth="840"
         MaxWidth="840"
-        ResizeMode="CanResizeWithGrip" MinHeight="480">
+        ResizeMode="CanResizeWithGrip" MinHeight="460" SizeToContent="Width">
 
     <Grid VerticalAlignment="Stretch" >
         <Grid.ColumnDefinitions>
@@ -17,8 +17,7 @@
             <ListView Name="lvSentences" 
                       SelectionMode="Single" 
                       MouseDoubleClick="lvSentences_MouseDoubleClick" 
-                      VerticalAlignment="Stretch" 
-                      Margin="0, 0, 0, 10">
+                      VerticalAlignment="Stretch" >
                 <ListView.View>
                     <GridView>
                         <GridView.Columns>
@@ -112,8 +111,8 @@
             </StackPanel>
             <Button Content="Generate Voice Files" Name="buttonGenerate" Click="buttonSaveFiles_Click" Margin="10,10,10,0" />
             <Separator Height="5" />
-            <StackPanel Width="Auto" Orientation="Vertical">
-                <TextBlock FontSize="18" VerticalAlignment="Center" MouseLeftButtonDown="InstallVoices_MouseLeftButtonDown" Cursor="Hand" HorizontalAlignment="Right" Margin="0,0,10,0">Install Voices</TextBlock>
+            <StackPanel Width="Auto" Orientation="Horizontal">
+                <TextBlock FontSize="18" VerticalAlignment="Center" MouseLeftButtonDown="InstallVoices_MouseLeftButtonDown" Cursor="Hand" HorizontalAlignment="Center" Margin="20,5,20,0" TextWrapping="Wrap" Height="48" Width="59" IsHyphenationEnabled="True">Install Voices</TextBlock>
                 <Image Name="openTXLogo" Height="48" Source="/OpenTXspeak;component/speaker_logo.png" MouseLeftButtonDown="openTXLogo_MouseLeftButtonDown" HorizontalAlignment="Right" Cursor="Hand" Margin="0,5,10,0"/>
             </StackPanel>
         </StackPanel>
