--- a/speaker/aboutWindow.xaml
+++ b/speaker/aboutWindow.xaml
@@ -1,26 +1,35 @@
 ﻿<Window x:Class="OpenTXspeak.AboutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="OpenTX About Window" Height="241" Width="330" Icon="/OpenTXspeak;component/icon.ico" Background="Gray">
+        Title="OpenTX About Window" Height="354" Width="357" Icon="/OpenTXspeak;component/icon.ico">
     <Grid>
         <StackPanel>
             <StackPanel Orientation="Horizontal">
-                <Label Content="Product:" Foreground="White">
-                </Label>
-                <Label Content="Product Name" Name="lblProductName"  Foreground="White"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label Content="Version:" Foreground="White"/>
-                <Label Content="Version" Name="lblVersion"  Foreground="White"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label Content="Author:"  Foreground="White"/>
-                <Label Content="Author:" Name="lblCompanyName"  Foreground="White"/>
-            </StackPanel>
-            <Label Content="Copyright" Name="lblCopyright"  Foreground="White"/>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="TextBlock" Name="description" Height="88" Margin="5,5,10,0" TextWrapping="Wrap" Width="200"  Foreground="White"/>
+                <StackPanel Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal" Width="240" HorizontalAlignment="Left">
+                        <Label Content="Product:">
+                        </Label>
+                        <Label Content="Product Name" Name="lblProductName"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal"  HorizontalAlignment="Left">
+                        <Label Content="Version:"/>
+                        <Label Content="Version" Name="lblVersion"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Label Content="Company:" />
+                        <Label Content="Company" Name="lblCompanyName"/>
+                    </StackPanel>
+                    <Label Content="Copyright" Name="lblCopyright" HorizontalAlignment="Left" />
+                </StackPanel>
                 <Image Source="/OpenTXspeak;component/icon.ico" Stretch="Uniform" Height="90" Width="90" />
+            </StackPanel>
+            <StackPanel Orientation="Vertical">
+                <TextBlock Margin="5,5,0,0" TextWrapping="Wrap"
+                    Text="This application is used to edit OpenTX voice strings and generate audio files for use in the FrSky Taranis radio." />
+                <TextBlock Margin="5,10,0,0" TextWrapping="Wrap"
+                    Text= "This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version." />
+                <TextBlock Margin="5,5,0,0" TextWrapping="Wrap"
+                    Text= "This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details." />
             </StackPanel>
         </StackPanel>
     </Grid>
