--- a/sound/recorder/aboutWindow.xaml
+++ b/sound/recorder/aboutWindow.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="OpenTXspeak.AboutWindow"
+﻿<Window x:Class="OpenTXrecorder.AboutWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="OpenTX About Window" Height="370" Width="357" Icon="/OpenTXspeak;component/icon.ico">
+        Title="OpenTX Recorder About Window" Height="350" Width="357" Icon="/OpenTXrecorder;component/icon.ico">
     <Grid>
         <StackPanel>
             <StackPanel Orientation="Horizontal">
@@ -23,23 +23,23 @@
                 </StackPanel>
                 <TextBlock>
                         <Hyperlink NavigateUri="http://www.open-tx.org/" RequestNavigate="Hyperlink_RequestNavigate">
-                        <Image Source="/OpenTXspeak;component/icon.ico" Stretch="Uniform" Height="90" Width="90" Cursor="Hand" />
+                        <Image  Stretch="Uniform" Height="90" Width="90" Cursor="Hand" Source="/OpenTXrecorder;component/icon.ico" />
                     </Hyperlink>
                 </TextBlock>
             </StackPanel>
             <StackPanel Orientation="Vertical">
                 <TextBlock Margin="5,5,5,0" TextWrapping="Wrap"
-                    Text="This application is used to edit OpenTX voice strings and generate audio files for use in the FrSky Taranis radio." />
+                    Text="This application is used to record OpenTX voice strings and generate audio files for use in the FrSky Taranis radio." />
                 <TextBlock Margin="5,10,5,0" TextWrapping="Wrap"
                     Text= "This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version." />
                 <TextBlock Margin="5,5,5,0" TextWrapping="Wrap"
                     Text= "This program is distributed in the hope that it will be useful, but without any warranty; without even the implied warranty of merchantability or fitness for a particular purpose." />
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock TextWrapping="Wrap" Margin="5,5,5,0" Width="175"
+                    <TextBlock TextWrapping="Wrap" Margin="5,5,5,0" Width="230"
                         Text= "See the GNU General Public License for more details."  />
                     <TextBlock>
                         <Hyperlink NavigateUri="http://www.gnu.org/licenses/" RequestNavigate="Hyperlink_RequestNavigate">
-                            <Image Height="60" Width="149" Source="/OpenTXspeak;component/GPLv3_Logo.png" Margin="0,5,0,0" Cursor="Hand" />
+                            <Image   Margin="0,5,0,0" Cursor="Hand" Source="/OpenTXrecorder;component/GPLv3_Logo.png" MinWidth="88" MaxWidth="88" />
                         </Hyperlink>
                     </TextBlock>
                 </StackPanel>
