--- a/sound/speaker/MainWindow.xaml
+++ b/sound/speaker/MainWindow.xaml
@@ -2,10 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="OpenTX Speaker" 
-        Height="460" 
+        Height="514" 
         MinWidth="840"
         MaxWidth="840"
-        ResizeMode="CanResizeWithGrip" MinHeight="460" SizeToContent="Width">
+        ResizeMode="CanResizeWithGrip" MinHeight="514" SizeToContent="Width" Icon="/OpenTXspeaker;component/icon.ico">
 
     <Grid VerticalAlignment="Stretch" >
         <Grid.ColumnDefinitions>
@@ -71,7 +71,7 @@
                 <TextBox   Text="{Binding Path=voiceString}" Grid.Row="2" Grid.Column="1"  Margin="0,0,10,0"/>
             </Grid>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
-                <TextBlock Text="Voice Rate" Width="70" Margin="10,10,0,0"   />
+                <TextBlock Text="Rate" Width="70" Margin="10,10,0,0"   />
                 <Slider Name="voiceRateSlider" 
                         Value="0"
                         Minimum="-5" 
@@ -82,6 +82,21 @@
                         Width="170" 
                         Margin="10,10,10,0"/>
                 <TextBlock Text="{Binding ElementName=voiceRateSlider, Path=Value}" Width="40" Margin="0,10,0,0"/>
+                <TextBlock Text="Voice Rate" Width="70" Margin="10,10,0,0"   />
+            </StackPanel>
+            
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
+                <TextBlock Text="Volume" Width="70" Margin="10,10,0,0"   />
+                <Slider Name="voiceVolumeSlider" 
+                        Value="50"
+                        Minimum="0" 
+                        Maximum="100" 
+                        TickPlacement="BottomRight" 
+                        TickFrequency="10" 
+                        IsSnapToTickEnabled="False"
+                        Width="170" 
+                        Margin="10,10,10,0"/>
+                <TextBlock Text="{Binding ElementName=voiceVolumeSlider, Path=Value}" Width="40" Margin="0,10,0,0"/>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
@@ -91,7 +106,7 @@
             <Separator Height="5" />
             <TextBlock Text="Voice Files" Margin="5,0,0,0" FontSize="18"   />
             <StackPanel Orientation="Horizontal" >
-                <TextBlock Text="Voice Rate" Width="70" Margin="10,0,0,0"   />
+                <TextBlock Text="Rate" Width="70" Margin="10,0,0,0"   />
                 <Slider Name="fileRateSlider" 
                         Value="0"
                         Minimum="-5" 
@@ -103,18 +118,34 @@
                         Margin="10,0,10,0"/>
                 <TextBlock Text="{Binding ElementName=fileRateSlider, Path=Value}" Width="40" />
             </StackPanel>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
+                <TextBlock Text="Volume" Width="70" Margin="10,10,0,0"   />
+                <Slider Name="fileVolumeSlider" 
+                        Value="50"
+                        Minimum="0" 
+                        Maximum="100" 
+                        TickPlacement="BottomRight" 
+                        TickFrequency="10" 
+                        IsSnapToTickEnabled="False"
+                        Width="170" 
+                        Margin="10,10,10,0"/>
+                <TextBlock Text="{Binding ElementName=fileVolumeSlider, Path=Value}" Width="40" Margin="0,10,0,0"/>
+            </StackPanel>
+
+
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Sample Rate"  Width="70" Margin="10,10,0,0"   />
                 <RadioButton Content="8 KHz" Height="16" Name="rb8khz" Margin="10,10,0,0"/>
-                <RadioButton Content="16 kHz" Height="16" Name="rb16khz" Margin="10,10,0,0" />
-                <RadioButton Content="32 kHz" Height="16" Name="rb32khz" IsChecked="True" Margin="10,10,0,0"/>
+                <RadioButton Content="16 kHz" Height="16" Name="rb16khz" IsChecked="True" Margin="10,10,0,0" />
+                <RadioButton Content="32 kHz" Height="16" Name="rb32khz"  Margin="10,10,0,0"/>
             </StackPanel>
             <Button Content="Generate Voice Files" Name="buttonGenerate" Click="buttonSaveFiles_Click" Margin="10,10,10,0" />
             <Separator Height="5" />
-            <StackPanel Width="Auto" Orientation="Horizontal">
-                <TextBlock FontSize="18" VerticalAlignment="Center" MouseLeftButtonDown="InstallVoices_MouseLeftButtonDown" Cursor="Hand" HorizontalAlignment="Center" Margin="20,5,20,0" TextWrapping="Wrap" Height="48" Width="59" IsHyphenationEnabled="True">Install Voices</TextBlock>
-                <Image Name="openTXLogo" Height="48" Source="/OpenTXspeak;component/speaker_logo.png" MouseLeftButtonDown="openTXLogo_MouseLeftButtonDown" HorizontalAlignment="Right" Cursor="Hand" Margin="0,5,10,0"/>
-            </StackPanel>
+
+        </StackPanel>
+        <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+            <TextBlock FontSize="18" VerticalAlignment="Center" MouseLeftButtonDown="InstallVoices_MouseLeftButtonDown" Cursor="Hand" HorizontalAlignment="Center" Margin="20,0,20,0" TextWrapping="Wrap" Height="48" Width="59" IsHyphenationEnabled="True">Install Voices</TextBlock>
+            <Image Name="openTXLogo" Height="48"  MouseLeftButtonDown="openTXLogo_MouseLeftButtonDown" HorizontalAlignment="Right" Cursor="Hand" Source="/OpenTXspeaker;component/speaker_logo.png" />
         </StackPanel>
     </Grid>
 </Window>
