--- a/sound/speaker/installvoices.xaml
+++ b/sound/speaker/installvoices.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="OpenTXspeak.InstallVoicesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Install Additional Voices" Height="269" Width="504">
+        Title="Install Additional Voices" Height="269" Width="504" Icon="/OpenTXspeaker;component/icon.ico">
     <Grid>
         <StackPanel Orientation="Vertical" >
             <TextBlock  Margin="5,5,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" TextWrapping="Wrap"
@@ -15,7 +15,7 @@
                         Text="The author of this application used the free eSpeak voices to test voice generation. Many languages are supported. Click the image on the right to go to eSpeaks project page. There you can find out if your language is supported and download the voice package."  />
                 <TextBlock>
                     <Hyperlink NavigateUri="http://espeak.sourceforge.net/" RequestNavigate="Hyperlink_RequestNavigate">
-                        <Image  Stretch="None" Source="/OpenTXspeak;component/eSpeak.png" Cursor="Hand" />
+                        <Image  Stretch="None" Cursor="Hand" Source="/OpenTXspeaker;component/eSpeak.png" />
                     </Hyperlink>
                 </TextBlock>
             </StackPanel>
