--- a/companion/src/generaledit.ui
+++ b/companion/src/generaledit.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>795</width>
+    <width>804</width>
     <height>912</height>
    </rect>
   </property>
@@ -1555,10 +1555,10 @@ Acceptable values are 5v..10v</string>
          <property name="sizeConstraint">
           <enum>QLayout::SetMinimumSize</enum>
          </property>
-         <property name="topMargin">
+         <property name="verticalSpacing">
           <number>0</number>
          </property>
-         <property name="verticalSpacing">
+         <property name="topMargin">
           <number>0</number>
          </property>
          <item row="0" column="2">
@@ -3522,6 +3522,11 @@ p, li { white-space: pre-wrap; }
          </property>
          <item>
           <property name="text">
+           <string>None</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
            <string>Pot (normal)</string>
           </property>
          </item>
@@ -3558,6 +3563,11 @@ p, li { white-space: pre-wrap; }
          </property>
          <item>
           <property name="text">
+           <string>None</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
            <string>Pot (normal)</string>
           </property>
          </item>
@@ -3573,6 +3583,47 @@ p, li { white-space: pre-wrap; }
          <property name="text">
           <string>S2 Type</string>
          </property>
+        </widget>
+       </item>
+       <item row="8" column="0">
+        <widget class="QLabel" name="pot3TypeLabel">
+         <property name="text">
+          <string>S3 Type</string>
+         </property>
+        </widget>
+       </item>
+       <item row="8" column="1">
+        <widget class="QComboBox" name="pot3Type">
+         <property name="toolTip">
+          <string/>
+         </property>
+         <property name="statusTip">
+          <string/>
+         </property>
+         <property name="whatsThis">
+          <string>Beeper volume
+
+0 - Quiet.  No beeps at all.
+1 - No Keys.  Normal beeps but menu keys do not beep.
+2 - Normal.
+3 - Loud.
+4 - Extra loud.</string>
+         </property>
+         <item>
+          <property name="text">
+           <string>None</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Pot (normal)</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Multipos Switch</string>
+          </property>
+         </item>
         </widget>
        </item>
       </layout>
