--- a/companion/src/generaledit.ui
+++ b/companion/src/generaledit.ui
@@ -3626,6 +3626,35 @@ p, li { white-space: pre-wrap; }
          </item>
         </widget>
        </item>
+       <item row="6" column="3">
+        <widget class="QComboBox" name="serialPortMode">
+         <item>
+          <property name="text">
+           <string>OFF</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>S-Port Mirror</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Debug</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="6" column="2">
+        <widget class="QLabel" name="serialPortLabel">
+         <property name="text">
+          <string>Serial Port</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </widget>
