--- a/companion/src/burnconfigdialog.ui
+++ b/companion/src/burnconfigdialog.ui
@@ -503,6 +503,61 @@ Please only use this if you know what you are doing.  There are no error checks 
        </item>
        <item>
         <property name="text">
+         <string notr="true">com5</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string notr="true">com6</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string notr="true">com7</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string notr="true">com8</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string notr="true">com9</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string notr="true">com10</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string notr="true">com11</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string notr="true">com12</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string notr="true">com13</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string notr="true">com14</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string notr="true">com15</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
          <string notr="true">lpt1</string>
         </property>
        </item>
