--- a/companion/src/companion.qrc
+++ b/companion/src/companion.qrc
@@ -57,6 +57,7 @@
     <file>images/x9r3.png</file>
     <file>images/x9s0.png</file>
     <file>images/x9t0.png</file>
+    <file>images/taranison.png</file>
     <file>images/mcw/aicon.png</file>
     <file>images/mcw/dicon.png</file>
     <file>images/mcw/gicon.png</file>
