--- a/companion/src/modeledit/flightmode.ui
+++ b/companion/src/modeledit/flightmode.ui
@@ -165,7 +165,7 @@
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
-         <layout class="QGridLayout" name="leftTrims_3" columnstretch="0,1" columnminimumwidth="80,0">
+         <layout class="QGridLayout" name="leftTrims_3" columnstretch="0,1">
           <item row="1" column="0">
            <widget class="QLabel" name="trim1Label">
             <property name="text">
@@ -299,7 +299,7 @@
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
-         <layout class="QGridLayout" name="righTrims_2" columnstretch="0,1" columnminimumwidth="80,0">
+         <layout class="QGridLayout" name="righTrims_2" columnstretch="0,1">
           <item row="1" column="0">
            <widget class="QLabel" name="trim4Label">
             <property name="text">
@@ -422,6 +422,19 @@
         </item>
        </layout>
       </widget>
+     </item>
+     <item row="0" column="4">
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
